crates/ddlog-syntax/tests/inline/pass/negation.rast
ROOT@0..22
  COMMENT@0..12 "// kind:expr"
  WHITESPACE@12..13 "\n"
  EXPR@13..22
    UNARY_EXPR@13..22
      UNARY_OP@13..14
        MINUS@13..14 "-"
      UNARY_EXPR@14..22
        UNARY_OP@14..15
          MINUS@14..15 "-"
        PAREN_EXPR@15..21
          L_PAREN@15..16 "("
          EXPR@16..20
            UNARY_EXPR@16..20
              UNARY_OP@16..17
                MINUS@16..17 "-"
              LITERAL@17..20
                NUMBER@17..20 "100"
          R_PAREN@20..21 ")"
        WHITESPACE@21..22 "\n"