crates/ddlog-syntax/tests/inline/fail/unclosed_paren.rast
ROOT@0..22
  COMMENT@0..12 "// kind:expr"
  WHITESPACE@12..13 "\n"
  EXPR@13..22
    PAREN_EXPR@13..22
      L_PAREN@13..14 "("
      EXPR@14..22
        PAREN_EXPR@14..21
          L_PAREN@14..15 "("
          EXPR@15..20
            PAREN_EXPR@15..20
              L_PAREN@15..16 "("
              EXPR@16..19
                LITERAL@16..19
                  NUMBER@16..19 "100"
              R_PAREN@19..20 ")"
          R_PAREN@20..21 ")"
        WHITESPACE@21..22 "\n"
--
Error: expected ')' but instead the file ends
   ,-[inline/fail/unclosed_paren.dl:2:10]
   |
 2 | (((100))
   :          | 
   :          `- the file ends here
---'
--
// kind:expr
(((100))

